--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "api-name-test",
+  "name": "cse-341-name",
   "version": "1.0.0",
-  "description": "A basic Node.js web server",
+  "description": "Simple server to display my name",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
