--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "cse-341-name",
   "version": "1.0.0",
   "description": "Simple server to display my name",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +21,9 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.14.1"
+    "mongoose": "^8.14.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
