--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cse-341-name",
   "version": "1.0.0",
-  "description": "Simple server to display my name",
+  "description": "Contacts API",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
